非模块化打包实现